I DID THE BONUSSSSSS!!!!

--- a/frontend.html
+++ b/frontend.html
@@ -19,7 +19,9 @@ ting, musical versatility, artistic reinventions, and influence on the music ind
 <button onclick="changeBackgroundColor('gold')">click me to turn the background gold</button>
 <button onclick="changeBackgroundColor('red')">click me to turn the background red</button>
 <button onclick="changeBackgroundColor('pink')">click me to turn the background pink</button>
-<br>
+<button onclick="changeBackgroundColor('purple')">back to purple</button>
 
+<br>
+<button onclick="changeBandF('blue','yellow')">click me to change back and forth</button>
 </body>
 </html>
